@@ -6,6 +6,8 @@ VERSION 0.8 - Jan 1 2012
 - Support for humanreadable xml or not.
 - Add a simple example.
 - Removed some warnings and notices.
+- Show and hide functions.
+- Remove Element function.
 
 VERSION 0.7 - Nov 16 2011
 - Added support for line
